Bug 59611 - Copy-and-paste error in ldapsearch_check_authorization log
Summary: Copy-and-paste error in ldapsearch_check_authorization log
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: mod_authnz_ldap (show other bugs)
Version: 2.4.20
Hardware: PC Linux
: P2 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords: FixedInTrunk
Depends on:
Blocks:
 
Reported: 2016-05-22 00:53 UTC by Tianyin Xu
Modified: 2016-12-31 00:33 UTC (History)
1 user (show)



Attachments
Patch against trunk (555 bytes, patch)
2016-05-22 00:55 UTC, Tianyin Xu
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tianyin Xu 2016-05-22 00:53:53 UTC
In ldapsearch_check_authorization(..) of modules/aaa/mod_authnz_ldap.c, the error log msg has the wrong directive name, due to copy-and-paste error from ldapfilter_check_authorization(..)

Patch is available. 

     ap_log_rerror(APLOG_MARK, APLOG_DEBUG, 0, r, APLOGNO(02633)
-                  "auth_ldap authorize filter: authorization denied for "
+                  "auth_ldap authorize search: authorization denied for "
                   "to %s", r->uri);
Comment 1 Tianyin Xu 2016-05-22 00:55:11 UTC
Created attachment 33859 [details]
Patch against trunk
Comment 2 Eric Covener 2016-05-22 12:05:30 UTC
Thanks for the report and patch, committed to trunk and will propose for 2.4.x shortly.
Comment 3 Eric Covener 2016-12-31 00:33:18 UTC
function seems to only exist in trunk, marking resolved.