PR59611: Fix AH02633 require type

Submitted By: Tianyin Xu <tixu cs.ucsd.edu> 
Commited By: covener



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1745033 13f79535-47bb-0310-9956-ffa450edef68